Cryptopanic API 토큰 적용 및 실시간 뉴스 정상화

--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
         // 뉴스 업데이트 (cryptopanic API)
         async function updateNews() {
             try {
-                const url = 'https://cryptopanic.com/api/v1/posts/?auth_token=demo&public=true';
+                const url = 'https://cryptopanic.com/api/v1/posts/?auth_token=043c81fa55c91915cbea4013cbec99f9b85d1600&public=true';
                 const res = await fetch('/api/cryptopanic?url=' + encodeURIComponent(url));
                 const data = await res.json();
                 const newsHTML = data.results.slice(0, 5).map(item => `
